# Josephus-Problem-Ui-Qt6-

./: README.md
josephus-problem/: CMakeLists.txt  main.cpp
